--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <!-- Questions go here -->
                 </div>
             </form>
+            <p id="question-counter"></p>
             <div id="pokemon-result" class="quiz-result" style="display: none;">
                 <div class="text-box">
                 <p id="final-message">Your ideal Pokémon is... </p>
