--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p id="final-message">Your ideal Pokémon is... </p>
             </div>
             <div class="pokemon-display">
-                <p><strong id="pokemon-name"></strong></p>
+                <p id="pokemon-name"></p>
                 <img id="pokemon-image" src="" alt="" />
             </div>
             </div>
