--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Pokémon Quiz</title>
+    <meta name="description" content="Perfect Pokémon Match Quiz - Find out which Gen 1 Pokémon best suits your personality!">
+    <meta property="og:title" content="Perfect Pokémon Match Quiz!" />
+    <meta property="og:description" content="Find out which of the 151 Gen 1 Pokémon best suits your personality!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.yourwebsite.com/pokemon-quiz" />
+    <meta property="og:image" content="./assets/pokemon-thumb.jpg" />
+    <meta property="twitter:image" content="./assets/pokemon-thumb.jpg" />
+    <meta property="twitter:title" content="Take the Pokémon Match Personality Quiz">
+    <title>Pokémon Match Quiz</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
