--- a/pokemon-quiz/index.html
+++ b/pokemon-quiz/index.html
@@ -10,9 +10,9 @@
     <meta property="og:description" content="Find out which of the 151 Gen 1 Pokémon best suits your personality!">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pikacodes.io/pokemon-quiz">
-    <meta property="og:image" content="./assets/pokemon-thumb.jpg">
-    <meta property="twitter:image" content="./assets/pokemon-thumb.jpg">
-    <meta property="twitter:title" content="Take the Pokémon Match Personality Quiz">
+    <meta property="og:image" content="../assets/pokemon-thumb.jpg">
+    <meta property="twitter:image" content="../assets/pokemon-thumb.jpg">
+    <meta property="twitter:title" content="Take the Pokémon Match Personality Quiz!">
     <title>Pokémon Match Quiz</title>
     <link rel="stylesheet" href="../style.css">
 </head>
