--- a/pokemon-quiz/index.html
+++ b/pokemon-quiz/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Perfect Pokémon Match Quiz - Find out which Gen 1 Pokémon best suits your personality!">
+    <meta name="description"
+        content="Perfect Pokémon Match Quiz - Find out which Gen 1 Pokémon best suits your personality!">
     <meta property="og:title" content="Perfect Pokémon Match Quiz!">
     <meta property="og:description" content="Find out which of the 151 Gen 1 Pokémon best suits your personality!">
     <meta property="og:type" content="website">
@@ -133,7 +134,14 @@
             <button id="share-button" class="share-btn" style="display: none;">tweet your results</button>
         </div>
     </div>
-    <script type="module" src="../script.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XKNEH077HS"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-XKNEH077HS');
+    </script>
 </body>
 
 </html>
