--- a/pokemon-quiz/index.html
+++ b/pokemon-quiz/index.html
@@ -14,6 +14,7 @@
     <meta property="og:image" content="https://i.ibb.co/yFZ8R4m/pokemon-thumb.jpg">
     <meta property="twitter:image" content="https://i.ibb.co/yFZ8R4m/pokemon-thumb.jpg">
     <meta property="twitter:card" content="summary_large_image">
+    <meta name="twitter:creator" content="@pikacodes" />
     <meta property="twitter:description" content="Find out which Gen 1 Pokémon best suits your personality!">
     <meta property="twitter:title" content="Take the Pokémon Match Personality Quiz">
     <title>Pokémon Match Quiz</title>
