--- a/pokemon-quiz/index.html
+++ b/pokemon-quiz/index.html
@@ -19,6 +19,7 @@
     <meta property="twitter:title" content="Take the Pokémon Match Personality Quiz">
     <title>Pokémon Match Quiz</title>
     <link rel="stylesheet" href="../style.css">
+    <link href="../assets/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 
 <body>
