--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta property="twitter:title" content="pikacodes website">
     <title>pikacodes</title>
     <link rel="stylesheet" href="home.css">
+    <link href="./assets/favicon.ico" rel="icon" type="image/x-icon">
 </head>
 <body>
     <h1>p i k a c o d e s</h1>
